Fix spacing and sizing on all sections

--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -2,9 +2,8 @@
 
 .footer {
   width: 100%;
-  // min-height: 600px;
   overflow: hidden;
-  padding-top: 1px;
+  padding-top: 70px;
   color: #fff;
   background: linear-gradient(178.26deg, #060505 22.29%, #454545 104.81%);
 
@@ -79,7 +78,6 @@
   }
 
   .blockContent {
-    margin-top: 110px;
     position: relative;
     z-index: 4;
   }
