--- a/src/components/home/partners/partners.module.scss
+++ b/src/components/home/partners/partners.module.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 68px 40px;
+  padding: 70px 40px;
   background: linear-gradient(
     180deg,
     rgba(218, 218, 218, 0.28) -13.59%,
@@ -21,7 +21,6 @@
   }
 
   .blockContainer {
-    padding-bottom: 2rem;
     text-align: center;
 
     .title {
