--- a/src/components/home/roadmap/roadmap.module.scss
+++ b/src/components/home/roadmap/roadmap.module.scss
@@ -1,17 +1,17 @@
 .roadmap {
   width: 100%;
-  padding: 20px;
+  padding: 70px 20px;
   background: linear-gradient(
     180deg,
     rgba(218, 218, 218, 0.28) -13.59%,
     rgba(250, 250, 250, 0) 100%
   );
   position: relative;
+  margin: 0;
 
   .title {
     text-align: center;
     margin: auto;
-    margin-top: 60px;
 
     h1 {
       font-weight: 300;
@@ -146,7 +146,7 @@
     }
   }
   .btnGroup {
-    margin: 40px 0 60px 0;
+    margin-top: 40px;
     text-align: center;
 
     @media (max-width: 990px) {
