--- a/src/components/home/useCases/useCases.module.scss
+++ b/src/components/home/useCases/useCases.module.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 68px 60px;
+  padding: 70px 60px;
   background: #fff;
 
   @media (max-width: 720px) {
